ops: change garbage collector to zgc